package Clases;

public enum Rol {
    ADMINISTRADOR, USUARIO
}
